--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Loteria-API",
+  "name": "MatingSeason-API",
   "version": "0.1.0",
   "description": "A sample Node.js app using Express 4",
   "engines": {
